Update to inventory api