@@ -9,14 +9,20 @@ import de.verdox.mccreativelab.wrapper.block.MCCBlockType;
 import de.verdox.mccreativelab.wrapper.entity.MCCEntity;
 import de.verdox.mccreativelab.wrapper.item.MCCItemStack;
 import de.verdox.mccreativelab.wrapper.platform.MCCPlatform;
+import de.verdox.mccreativelab.wrapper.world.MCCLocation;
 import net.kyori.adventure.key.Key;
+import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class NMSBlockState extends MCCHandle<BlockState> implements MCCBlockState {
     public static final MCCConverter<BlockState, NMSBlockState> CONVERTER = converter(NMSBlockState.class, BlockState.class, NMSBlockState::new, MCCHandle::getHandle);
@@ -67,9 +73,28 @@ public class NMSBlockState extends MCCHandle<BlockState> implements MCCBlockStat
     }
 
     @Override
-    public @NotNull List<MCCItemStack> getDrops(@Nullable MCCEntity entity, @Nullable MCCItemStack tool) {
-        //TODO
-        return List.of();
+    public @NotNull List<MCCItemStack> getDrops(@NotNull MCCLocation mccLocation, @Nullable MCCEntity entity, @Nullable MCCItemStack tool) {
+        ItemStack nms = conversionService.unwrap(tool, new TypeToken<>() {});
+
+        ServerLevel serverLevel = conversionService.unwrap(mccLocation.world(), new TypeToken<>() {});
+        BlockPos pos = new BlockPos(mccLocation.blockX(), mccLocation.blockY(), mccLocation.blockZ());
+        Entity nmsEntity = conversionService.unwrap(entity, new TypeToken<>() {});
+
+        if (tool == null || isPreferredTool(tool)) {
+            return Block.getDrops(handle, serverLevel, pos, serverLevel.getBlockEntity(pos), nmsEntity, nms).stream().map(itemStack -> conversionService.wrap(itemStack, new TypeToken<MCCItemStack>() {})).collect(Collectors.toList());
+        } else {
+            return Collections.emptyList();
+        }
+    }
+
+    @Override
+    public boolean isRandomlyTicking() {
+        return handle.isRandomlyTicking();
+    }
+
+    @Override
+    public boolean requiresCorrectToolForDrops() {
+        return handle.requiresCorrectToolForDrops();
     }
 
     @Override
